# berlin-transportation-app

./: .env.example  .env.template  .gitignore  Berlin_Transport_API.postman_collection.json  DEPLOYMENT.md  EC2_DEPLOYMENT_FIXES.md  FEATURES.md  Makefile  PRD.md  PRESENTATION_CHEATSHEET.md  PRESENTATION_GUIDE.md  README.md  TASK_PLAN.md  TESTING_DEPLOYMENT_BRANCH.md  VISUAL_DIAGRAMS.md  WEEK1_TASKS.md  backend-dockerfile  deploy-ec2.sh  docker-compose.yml  fix-ec2.sh  makefile  pyproject.toml  requirements-streamlit.txt  requirements.txt  start-dev.sh  start.sh  test_cache_performance.py  test_latency.py
.github/workflows/: ci.yml  lint.yml
airflow/docker/: dockerfile.airflow
backend/: README.md  requirements-dev.txt  requirements.txt  setup.cfg
backend/app/: config.py  exceptions.py  main.py
backend/app/api/: departures.py  radar.py  stations.py
backend/app/models/: transport.py
backend/tests/: conftest.py  test_api_endpoints.py  test_bvg_client.py  test_cache.py
config/: config.yaml
dbt/: dbt_project.yml  profiles.yml
docker/: Dockerfile.backend  Dockerfile.frontend  dockerfile.airflow  dockerfile.streamlit  init-airflow.sh  nginx.conf
docs/: API_REVIEW_REPORT.md  DEPLOYMENT_OPTIONS.md  FRONTEND_VALIDATION.md  GITHUB_ISSUES_PLAN.md  PROGRESS_SUMMARY.md  PROJECT_UPDATE.md
etl/: departures.py
extract/: README.md  departures.py
frontend/: config.js  index.html  styles.css
frontend/css/: styles.css
frontend/js/: app.js
scripts/: bucket_creation.sh  setup.sh  setup_minio.py  test_api_endpoints.py
tests/: test_api.py
(+10 files in other folders)
