[project]
name = "berlin-transport-elt-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<3.10",
    "black>=23.11,<24",
    "fastapi>=0.104,<0.105",
    "flake8>=6.1,<7",
    "gunicorn>=21.2,<21.3",
    "hiredis>=2.2,<2.3",
    "httpx>=0.25,<0.26",
    "jinja2>=3.1.6",
    "numpy>=1.26,<1.27",
    "pandas>=2.1,<2.2",
    "pydantic-settings>=2.1,<2.2",
    "pytest>=7.4,<8",
    "pytest-asyncio>=0.21,<0.22",
    "python-dateutil>=2.8,<2.9",
    "python-dotenv>=1.0,<1.1",
    "python-multipart>=0.0.6,<0.1",
    "redis>=5.0,<5.1",
    "uvicorn[standard]>=0.24,<0.25",
]
